# segmentation_by_opencv-dnn_or_onnx-runtime

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main_opencv.cpp  main_opencv.py  main_ort.cpp  main_ort.py
shell/: build_opencv5_cpp.sh  build_opencv5_python.sh  install_cuda.sh  install_onnxruntime.sh
